--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,7 +29,9 @@
   font-style: normal;
   font-display: swap;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 @layer base {
   :root {
     /* These can be your fallback values */
