--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,7 +72,7 @@ html {
     @apply text-xl leading-[30px]; /* 1.2rem font size, 2rem line height */
   }
   h2 {
-    @apply text-[72px]   /* 1.2rem font size, 2rem line height */;
+    @apply md:text-[72px] text-[40px]  /* 1.2rem font size, 2rem line height */;
   }
   h3 {
     @apply text-[40px]   /* 1.2rem font size, 2rem line height */;
